--- a/tex/documentation/developer_notes.tex
+++ b/tex/documentation/developer_notes.tex
@@ -35,6 +35,12 @@ target_link_libraries(hydro Logging)
 And that should do the trick!
 
 
+
+
+% -----------------------------------------------------------------
+\subsubsection{Libraries with other dependencies}
+% -----------------------------------------------------------------
+
 Note however that other libraries may require other libraries too. For example,
 the \verb|Utils| library, defined in \verb|src/CMakeLists.txt| as
 
@@ -51,6 +57,44 @@ target_link_libraries(Utils Version)
 target_link_libraries(Utils Logging)
 \end{lstlisting}
 
+
+
+
+
+% -----------------------------------------------------------------
+\subsubsection{\texttt{Version.cpp} and \texttt{Config.h}}
+% -----------------------------------------------------------------
+
+Currently, there are two exceptions to this procedure. Those are the files
+\verb|Version.cpp| and \verb|Config.h|. They are special because they will be
+generated with \verb|cmake| from their respective templates,
+\verb|src/Config.h.in| and \verb|src/Version.cpp.in|.
+
+The generated files will be \verb|your_build_dir/Version.cpp| and
+\verb|your_build_dir/Config.h|.  So to get the \verb|Version| library to
+compile, we need to tell it a) where to find the file, and b) that the header
+file that needs to be included is in a different directory. We do that as
+follows:
+
+
+\begin{lstlisting}
+add_library(Version "${CMAKE_BINARY_DIR}/Version.cpp" Version.h)
+target_include_directories(Version PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
+\end{lstlisting}
+
+\verb|${CMAKE_BINARY_DIR}| is the directory you're currently building the
+project in. The \verb|${CMAKE_CURRENT_SOURCE_DIR}| variable gives you the path
+to the directory where the \verb|CMakeLists.txt| file is located, which is
+conveniently the same directory as the \verb|Version.h| header file.
+
+
+
+Similarly, if you want a library to include the \verb|Config.h| header, you need to tell it where it is as follows. Take for example the library \verb|Utils| again:
+
+\begin{lstlisting}
+add_library(Utils Utils.cpp Utils.h)
+target_include_directories(Utils PUBLIC "${PROJECT_BINARY_DIR}")
+\end{lstlisting}
 
 
 
