--- a/tex/documentation/header.tex
+++ b/tex/documentation/header.tex
@@ -87,8 +87,14 @@
 
 
 \usepackage{xspace}
-\newcommand{\codename}[1]{\textsc{#1}}
-\newcommand{\hydro}{\codename{hydro-playground}\xspace}
+\newcommand{\codename}[1]{\textsc{#1}\xspace}
+\newcommand{\hydro}{\codename{hydro-playground}}
+\newcommand{\cmake}{\codename{cmake}}
+\newcommand{\mhutils}{\codename{mesh\_hydro\_utils}}
+\newcommand{\jargon}[1]{\texttt{#1}\xspace}
+\newcommand{\code}[1]{\texttt{#1}\xspace}
+
+
 
 \newcommand{\corresponds}{\mathrel{\widehat{=}}}		% equals with hat
 
