--- a/tex/documentation/introduction.tex
+++ b/tex/documentation/introduction.tex
@@ -17,7 +17,7 @@ hyperbolic conservation laws, in particular the advection equation and the Euler
 equations of ideal gases.
 
 \hydro is written in C++ and makes use of \codename{cmake} for the build system.
-A simple python module, \codename{mesh\_hydro\_utils}\footnote{
+A simple python module, \mhutils\footnote{
 \url{https://github.com/mladenivkovic/mesh\_hydro\_utils}}, provides convenience
 functions to plot outputs and generate initial conditions. It depends on
 \codename{matplotlib} and \codename{numpy}.
