added tests subsection

--- a/tex/documentation/developer_notes.tex
+++ b/tex/documentation/developer_notes.tex
@@ -126,3 +126,20 @@ target_include_directories(Utils PUBLIC "${PROJECT_BINARY_DIR}")
 
 
 
+
+%===============================================================================
+\subsection{Tests}
+%===============================================================================
+
+%===============================================================================
+\susubbsection{Adding Tests}
+%===============================================================================
+
+- how to add tests
+
+- how to run tests
+
+- what tests do
+
+- CI
+
