fixed typo in subsection

--- a/tex/documentation/developer_notes.tex
+++ b/tex/documentation/developer_notes.tex
@@ -132,7 +132,7 @@ target_include_directories(Utils PUBLIC "${PROJECT_BINARY_DIR}")
 %===============================================================================
 
 %===============================================================================
-\susubbsection{Adding Tests}
+\subsubsection{Adding Tests}
 %===============================================================================
 
 - how to add tests
