massive update documentation

--- a/tex/documentation/documentation.tex
+++ b/tex/documentation/documentation.tex
@@ -38,6 +38,7 @@
 
 \input{introduction}
 \input{getting_started}
+\input{format_specification}
 \input{implementation_details}
 \input{developer_notes}
 
