--- a/tex/documentation/implementation_details.tex
+++ b/tex/documentation/implementation_details.tex
@@ -14,11 +14,11 @@
 
 \begin{itemize} 
 
-    \item 	All the source files are in the \verb|src/| directory.
+    \item All the source files are in the \verb|src/| directory.
 
-    \item 	\verb|tests/| contains unit and functional tests.
+    \item \verb|tests/| contains unit tests and functional tests.
 	
-    \item   \verb|tex/| contains LaTeX documentation of the code:
+    \item \verb|tex/| contains LaTeX documentation of the code:
 
     \begin{itemize}
         \item   \verb|tex/documentation| contains the code documentation,
@@ -27,17 +27,21 @@
 
         \item   \verb|tex/theory| contains equations being solved, and the 
                 numerical methods used to solve them.
+
+%         \item   \verb|tex/results| contains results.
     \end{itemize}
+
+    \item \verb|python_module| is a git submodule containing the
+                \mhutils python module.
+
+    \item \verb|examples| contains ready-to-go example simulations. See the
+                README therein for more details.
+
 \end{itemize}
 
+\todo{Results}
 
-\todo{
-Add Python
 
-Add  sh scripts, ICs, ...
-
-Add individual files, like CMakeLists.txt
-}
 
 
 
