--- a/tex/documentation/introduction.tex
+++ b/tex/documentation/introduction.tex
@@ -6,9 +6,9 @@
 %======================================================
 
 
-\hydro is a simple toy code solving finite volume hydrodynamics in 2D. The main
-goal is to have simple working code as a playground for developments in terms of
-acceleration, optimisation, and parallelisation.
+\hydro is a simple toy code solving finite volume hydrodynamics in 2D on a
+uniform grid. The main goal is to have simple working code as a playground for
+developments in terms of acceleration, optimisation, and parallelisation.
 
 It is based on the \codename{Mesh-Hydro}
 code\footnote{\url{https://github.com/mladenivkovic/mesh-hydro}}, which is a
@@ -21,5 +21,7 @@ A simple python module, \mhutils\footnote{
 \url{https://github.com/mladenivkovic/mesh\_hydro\_utils}}, provides convenience
 functions to plot outputs and generate initial conditions. It depends on
 \codename{matplotlib} and \codename{numpy}.
+
+
 
 
