--- a/tex/documentation/header.tex
+++ b/tex/documentation/header.tex
@@ -16,7 +16,7 @@
 %]{scrartcl or scrreprt or scrbook} % The class file specifying the document structure
 
 \usepackage{amssymb, amsmath, color, graphicx, float, setspace, tipa}
-\usepackage[utf8]{inputenc} 
+\usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage[pdfpagelabels,
 			pdfstartview = FitH,
@@ -104,7 +104,7 @@
 \newcommand{\limz}[1]{\lim\limits_{#1 \rightarrow 0}}	% Limes of something towars zero
 
 \newcommand{\bm}{\boldmath}								% Bold font in math
-\newcommand{\dps}{\displaystyle}						
+\newcommand{\dps}{\displaystyle}
 
 \newcommand{\e}{\mbox{e}}								% e noncursive in math mode
 
@@ -174,6 +174,7 @@
 
 % shortcut for TODO box
 \newcommand{\todo}[1]{\begin{mdframed}[style=todo,frametitle={TODO}] #1 \end{mdframed}}
+\newcommand{\note}[1]{\begin{mdframed}[style=note,frametitle={Note}] #1 \end{mdframed}}
 
 
 % replace \sum with \sum\limits
@@ -238,20 +239,20 @@
     innerrightmargin=10,
     %frametitlerule=true,
     %frametitlerulecolor=black,
-    frametitlebackgroundcolor=babyblueeyes,
+    frametitlebackgroundcolor=bittersweet,
     frametitlerulewidth=2
 }
 
 
-% \mdfdefinestyle{eyecatcher}{%
-%     %rightline=true,
-%     innerleftmargin=10,
-%     innerrightmargin=10,
-%     %frametitlerule=true,
-%     %frametitlerulecolor=black,
-%     frametitlebackgroundcolor=bittersweet,
-%     frametitlerulewidth=2
-% }
+\mdfdefinestyle{note}{%
+    %rightline=true,
+    innerleftmargin=10,
+    innerrightmargin=10,
+    %frametitlerule=true,
+    %frametitlerulecolor=black,
+    frametitlebackgroundcolor=babyblueeyes,
+    frametitlerulewidth=2
+}
 
 
 
