minor fixes in tex stuff

--- a/tex/documentation/format_specification.tex
+++ b/tex/documentation/format_specification.tex
@@ -9,7 +9,7 @@
 
 \note{
     An example parameter file containing all recognized parameters is stored as
-    \verb|hydro_playground/examples/example_paramfile.txt|.
+    \texttt{hydro\_playground/examples/example\_paramfile.txt}.
 }
 
 
