--- a/tex/documentation/getting_started.tex
+++ b/tex/documentation/getting_started.tex
@@ -270,7 +270,7 @@ or
 ./hydro --ic-file=<ic_file> --config-file=<config_file>
 \end{lstlisting}
 
-where \verb|<ic_file>|` is the path to the initial conditions file you want to
+where \verb|<ic_file>| is the path to the initial conditions file you want to
 use, and \verb|<config_file>| is the path to the parameter file you want to use.
 
 You may want to look into the \verb|hydro_playground/examples| directory for
