--- a/tex/documentation/getting_started.tex
+++ b/tex/documentation/getting_started.tex
@@ -17,7 +17,7 @@
         \codename{matplotlib} for plotting outputs and generating initial
         conditions.
 \item   (optional) \codename{LaTeX} to create the \jargon{TeX} files. I
-        hardcoded the \jargon{pdflatex} command in the scripts. It doesn't
+        hard-coded the \jargon{pdflatex} command in the scripts. It doesn't
         require any fancy \codename{LaTeX} packages.
 \end{itemize}
 
@@ -91,7 +91,7 @@ way. In those cases, you can try
 pip install --user -e .
 \end{lstlisting}
 
-first. If that doesn't work, a reliable failsafe is to create a python virtual
+first. If that doesn't work, a reliable fail-safe is to create a python virtual
 environment and install it there. (In fact, this should be the preferred
 method.) You can do this by:
 
