--- a/tex/documentation/getting_started.tex
+++ b/tex/documentation/getting_started.tex
@@ -261,17 +261,17 @@ file (Section~\ref{chap:paramfile}) and an initial conditions file
 You can specify them as follows:
 
 \begin{lstlisting}
-./hydro --ic-file <ic_file> --config-file <config_file>
+./hydro --ic-file <ic_file> --param-file <param_file>
 \end{lstlisting}
 
 or
 
 \begin{lstlisting}
-./hydro --ic-file=<ic_file> --config-file=<config_file>
+./hydro --ic-file=<ic_file> --param-file=<param_file>
 \end{lstlisting}
 
 where \verb|<ic_file>| is the path to the initial conditions file you want to
-use, and \verb|<config_file>| is the path to the parameter file you want to use.
+use, and \verb|<param_file>| is the path to the parameter file you want to use.
 
 You may want to look into the \verb|hydro_playground/examples| directory for
 some ready-to-go examples.
