bit of formatting in latex

--- a/tex/documentation/getting_started.tex
+++ b/tex/documentation/getting_started.tex
@@ -228,11 +228,10 @@ Currently available build options are:
     (Default = \code{Release})
     \begin{itemize}
         \item Build type of the project.
-        \item  \code{Release}: Enables aggressive compiler optimisation. This
-                is the default mode.
-        \item  \code{RelWithDebInfo}: Release mode, but with debugging symbols
+        \item \code{Release}: Enables aggressive compiler optimisation.
+        \item \code{RelWithDebInfo}: Release mode, but with debugging symbols
                 attached. Also activates some light debugging checks.
-        \item  \code{Debug}: Turns compiler optimisation off and enables
+        \item \code{Debug}: Turns compiler optimisation off and enables
                 extensive debugging checks.
     \end{itemize}
 
@@ -240,11 +239,12 @@ Currently available build options are:
     (Default = \code{DOUBLE})
     \begin{itemize}
         \item Set precision for floating point variables.
-        \item  \code{SINLGE}: Single-precision floats.
-        \item  \code{DOUBLE}: Double-precision floats.
+        \item \code{SINLGE}: Single-precision floats.
+        \item \code{DOUBLE}: Double-precision floats.
     \end{itemize}
 
-\item \verb|-DTERMINAL_COLORS=ON| : Enable coloured output to \jargon{stdout} and \jargon{stderr} on terminals.
+\item \verb|-DTERMINAL_COLORS=ON| :
+    Enable coloured output to \jargon{stdout} and \jargon{stderr} on terminals.
 
 \end{itemize}
 
