--- a/tex/documentation/format_specification.tex
+++ b/tex/documentation/format_specification.tex
@@ -140,40 +140,14 @@ Name & Default & Type & Description
 \texttt{write\_replications} &
     = \texttt{false} &
     \texttt{bool} &
-    If \texttt{replicate} > 1, setting this to true will write the entire content of the box, including all replications.
+    If \texttt{replicate} $>$ 1, setting this to true will write the entire
+    content of the box, including all replications.
 \end{tabular}
 
 
 
 
 
-
-%
-% % ---------------------------------------
-% \subsubsection{Source Term Parameters}
-% % ---------------------------------------
-%
-% \begin{tabular}[c]{p{2.5cm} p{1.5cm} p{1.cm} p{9.cm}}
-% Name & Default & Type & Description \\
-% \hline
-% \hline
-% \texttt{src\_const\_acc\_x} &
-%     = 0 &
-%     \texttt{float} &
-%     constant acceleration in x direction for constant source terms
-% \\ \hline
-% \texttt{src\_const\_acc\_y} &
-%     = 0 &
-%     \texttt{float} &
-%     constant acceleration in y direction for constant source terms
-% \\ \hline
-% \texttt{src\_const\_acc\_r} &
-%     = 0 &
-%     \texttt{float} &
-%     constant acceleration in radial direction for radial source terms
-% \\ \hline
-% \end{tabular}
-%
 
 
 
@@ -257,8 +231,8 @@ and \texttt{u\_r} for the velocities instead of \texttt{v\_L} and
 
 \note{
     The file format is not really suitable for display on a
-    \code{LaTeX}-generated \jargon{pdf}. You may want to check out the
-    \jargon{README} in the repository's root directory or on github.
+    LaTeX-generated pdf. You may want to check out the
+    README in the repository's root directory or on github.
 }
 
 
